# catarinense-simulator

./: .gitignore  pyproject.toml
.github/workflows/: update-dataset.yml
datasets/catarinense_serie_b_2026/: dashboard.json  matches.json  standings.json  teams.json
src/league_simulator/: cli.py  config.py
src/league_simulator/api/: app.py  routes.py
src/league_simulator/builders/: dashboard_builder.py
src/league_simulator/domain/: expected_goals.py  forced_result.py  league.py  match.py  match_probability.py  match_result.py  monte_carlo_result.py  simulation.py  standing.py  team.py  team_rating.py
src/league_simulator/engines/: expected_goals_engine.py  iterative_rating_engine.py  monte_carlo_engine.py  probability_engine.py  rating_engine.py  score_engine.py  simulation_engine.py
src/league_simulator/exporters/: json_exporter.py
src/league_simulator/loaders/: json_loader.py
src/league_simulator/parsers/: fcf_parser.py  football_data_parser.py
src/league_simulator/providers/: fcf_provider.py  football_data_provider.py
src/league_simulator/reporters/: console_reporter.py
src/league_simulator/services/: league_cache.py  scenario_service.py
src/league_simulator/tools/: test_football_data.py  update_dataset.py
