[project]
name = "league-simulator"
version = "0.1.0"
description = "A Monte Carlo simulation engine for football league predictions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/league_simulator"]
